14-traefik/02-app/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-ratelimit
  # namespace: traefik
spec:
  rateLimit:
    average: 5
    period: 1s
