14-traefik/02-app/dashboard.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.jsdtech.app`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
